--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- Header -->
     <header class="header">
-        <div class="logo">APEX</div>
+        <div class="logo">NIKE</div>
         <nav class="nav" id="desktop-nav">
             <a href="#hero">Home</a>
             <a href="#products">Collections</a>
@@ -261,7 +261,7 @@
         </div>
 
         <div class="contact-container">
-            <form id="contact-form" class="contact-form">
+            <form id="contact-form" class="contact-form" action="https://formspree.io/f/xwvnlnga" method="POST">
                 <div class="form-group">
                     <label for="name">Full Name</label>
                     <input type="text" id="name" name="name" placeholder="John Doe" required>
