--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 
@@ -21,7 +20,13 @@
 
     <!-- Header -->
     <header class="header">
-        <div class="logo">NIKE</div>
+        <div class="logo">
+            <svg class="nike-logo" viewBox="0 0 69 32" fill="currentColor">
+                <path
+                    d="M68.56 4.06C67.68 3.6 66.62 3.38 65.42 3.38c-3.1 0-6.26 1.74-9.5 5.18L27.26 39.08c-3.26 3.44-5.92 5.18-7.96 5.18-.92 0-1.62-.34-2.12-.98-.5-.66-.74-1.52-.74-2.6 0-1.56.52-3.42 1.58-5.58L30.78 9.88c.94-1.94 1.42-3.54 1.42-4.82 0-1.56-.52-2.82-1.54-3.74C29.64.4 28.26-.1 26.52-.1c-1.58 0-3.22.46-4.88 1.4L.36 13.14C.12 13.3 0 13.5 0 13.74c0 .18.08.34.22.46.16.14.34.2.54.2.14 0 .3-.04.48-.14L22.52 2.42c1.16-.66 2.14-1 2.96-1 .66 0 1.16.2 1.52.58.36.4.54.92.54 1.58 0 .94-.44 2.28-1.32 4.02L13.48 33.78c-1.26 2.58-1.88 4.78-1.88 6.6 0 1.66.56 3.02 1.68 4.04 1.12 1.04 2.56 1.56 4.32 1.56 2.58 0 5.58-1.74 9.02-5.24l28.76-30.52c2.72-2.86 5.18-4.3 7.38-4.3.86 0 1.56.24 2.08.7.52.48.78 1.08.78 1.82 0 .48-.08.94-.24 1.38-.16.44-.42.86-.76 1.24l-.44.5c-.1.12-.14.24-.14.36 0 .18.08.34.24.46.14.12.32.18.52.18.26 0 .5-.12.72-.36l.48-.54c.48-.56.84-1.16 1.08-1.82.24-.66.36-1.32.36-2 0-1.22-.42-2.22-1.26-2.96-.82-.76-1.92-1.14-3.26-1.14z"
+                    transform="scale(0.7) translate(0, 5)" />
+            </svg>
+        </div>
         <nav class="nav" id="desktop-nav">
             <a href="#hero">Home</a>
             <a href="#products">Collections</a>
@@ -370,377 +375,4 @@
     <script src="script.js"></script>
 </body>
 
-=======
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>APEX Sports - Premium Athletic Gear</title>
-
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Outfit:wght@300;400;500;600;700;800&display=swap"
-        rel="stylesheet">
-
-    <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-
-    <!-- Header -->
-    <header class="header">
-        <div class="logo">APEX</div>
-        <nav class="nav" id="desktop-nav">
-            <a href="#hero">Home</a>
-            <a href="#products">Collections</a>
-            <a href="#faq">FAQ</a>
-            <a href="#contact">Contact</a>
-        </nav>
-        <div class="header-actions">
-            <button id="theme-toggle" class="theme-toggle" aria-label="Toggle theme">🌙</button>
-            <button id="mobile-menu-btn" class="mobile-menu-btn">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
-        </div>
-    </header>
-
-    <!-- Mobile Navigation -->
-    <div class="mobile-nav" id="mobile-nav">
-        <a href="#hero">Home</a>
-        <a href="#products">Collections</a>
-        <a href="#faq">FAQ</a>
-        <a href="#contact">Contact</a>
-    </div>
-
-    <!-- Hero Section with Image Slider -->
-    <section class="hero" id="hero">
-        <div class="hero-slider">
-            <div class="hero-slide active">
-                <img src="https://images.unsplash.com/photo-1556906781-9a412961c28c?w=1920&q=80"
-                    alt="Premium running shoes" loading="eager">
-            </div>
-            <div class="hero-slide">
-                <img src="https://images.unsplash.com/photo-1571019614242-c5c5dee9f50b?w=1920&q=80"
-                    alt="Athlete training" loading="lazy">
-            </div>
-            <div class="hero-slide">
-                <img src="https://images.unsplash.com/photo-1517836357463-d25dfeac3438?w=1920&q=80"
-                    alt="Athletic gear collection" loading="lazy">
-            </div>
-        </div>
-
-        <button class="slider-btn prev" id="slider-prev">‹</button>
-        <button class="slider-btn next" id="slider-next">›</button>
-
-        <div class="hero-content">
-            <div class="visit-badge" id="visit-counter">Visit #1</div>
-            <h1 class="hero-title">UNLEASH YOUR POTENTIAL</h1>
-            <p class="hero-subtitle">Elite performance gear engineered for champions who refuse to settle.</p>
-            <div class="hero-buttons">
-                <button class="btn-primary shop-btn">Explore Collection</button>
-                <button class="btn-secondary" id="subscribe-btn">Join the Movement</button>
-            </div>
-        </div>
-
-        <div class="slider-dots"></div>
-    </section>
-
-    <!-- Product Section with Read More Feature -->
-    <section class="products" id="products">
-        <div class="section-header">
-            <h2>Featured Collections</h2>
-            <p class="section-subtitle">Precision-crafted gear for every athlete</p>
-        </div>
-
-        <div class="product-grid">
-            <div class="product-card">
-                <div class="product-img">
-                    <img src="https://images.unsplash.com/photo-1542291026-7eec264c27ff?w=600&q=80"
-                        alt="Elite Running Shoes" loading="lazy">
-                </div>
-                <div class="product-badge">NEW</div>
-
-                <h3>Elite Running Shoes</h3>
-
-                <p class="short-text">Lightweight & breathable</p>
-                <p class="full-text" style="display: none;">
-                    Experience unmatched comfort with our revolutionary cushioning technology.
-                    Engineered with aerospace-grade materials for maximum energy return.
-                    Perfect for marathon runners and daily trainers alike.
-                </p>
-                <button class="read-more-btn">Read More</button>
-            </div>
-
-            <div class="product-card">
-                <div class="product-img">
-                    <img src="https://images.unsplash.com/photo-1518459031867-a89b944bffe4?w=600&q=80"
-                        alt="Pro Training Wear" loading="lazy">
-                </div>
-                <div class="product-badge">SALE</div>
-                <h3>Pro Training Wear</h3>
-                <p class="short-text">Built for flexibility</p>
-                <p class="full-text" style="display: none;">
-                    Advanced moisture-wicking fabric keeps you cool during intense workouts.
-                    4-way stretch technology moves with your body.
-                    Reinforced stitching for durability that lasts season after season.
-                </p>
-                <button class="read-more-btn">Read More</button>
-            </div>
-
-            <div class="product-card">
-                <div class="product-img">
-                    <img src="https://images.unsplash.com/photo-1600185365926-3a2ce3cdb9eb?w=600&q=80"
-                        alt="Street Sneakers" loading="lazy">
-                </div>
-                <div class="product-badge">HOT</div>
-                <h3>Street Sneakers</h3>
-                <p class="short-text">Comfort meets style</p>
-                <p class="full-text" style="display: none;">
-                    Premium leather construction with modern design aesthetics.
-                    Memory foam insoles provide all-day comfort.
-                    Versatile enough for the gym or the streets.
-                </p>
-                <button class="read-more-btn">Read More</button>
-            </div>
-
-            <div class="product-card">
-                <div class="product-img">
-                    <img src="https://images.unsplash.com/photo-1515886657613-9f3515b0c78f?w=600&q=80"
-                        alt="Performance Apparel" loading="lazy">
-                </div>
-                <h3>Performance Apparel</h3>
-                <p class="short-text">Temperature regulation</p>
-                <p class="full-text" style="display: none;">
-                    Climate-adaptive technology keeps you at optimal temperature.
-                    Seamless construction eliminates chafing.
-                    Anti-odor treatment keeps you fresh longer.
-                </p>
-                <button class="read-more-btn">Read More</button>
-            </div>
-
-            <div class="product-card">
-                <div class="product-img">
-                    <img src="https://images.unsplash.com/photo-1544367567-0f2fcb009e0b?w=600&q=80"
-                        alt="Recovery Essentials" loading="lazy">
-                </div>
-                <h3>Recovery Essentials</h3>
-                <p class="short-text">Optimize your rest</p>
-                <p class="full-text" style="display: none;">
-                    Compression technology accelerates muscle recovery.
-                    Graduated pressure zones target key muscle groups.
-                    Perfect for post-workout relaxation.
-                </p>
-                <button class="read-more-btn">Read More</button>
-            </div>
-
-            <div class="product-card">
-                <div class="product-img">
-                    <img src="https://images.unsplash.com/photo-1553062407-98eeb64c6a62?w=600&q=80"
-                        alt="Accessories Collection" loading="lazy">
-                </div>
-                <h3>Accessories Collection</h3>
-                <p class="short-text">Complete your kit</p>
-                <p class="full-text" style="display: none;">
-                    Premium bags, bottles, and gear to complement your training.
-                    Durable materials built to withstand daily use.
-                    Thoughtful design meets practical functionality.
-                </p>
-                <button class="read-more-btn">Read More</button>
-            </div>
-        </div>
-    </section>
-
-    <!-- FAQ Section (Show/Hide) -->
-    <section class="faq-section" id="faq">
-        <div class="section-header">
-            <h2>Frequently Asked Questions</h2>
-            <p class="section-subtitle">Everything you need to know</p>
-        </div>
-
-        <div class="faq-container">
-            <div class="faq-item">
-                <div class="faq-question">
-                    <h3>What is your return policy?</h3>
-                    <span class="faq-icon">+</span>
-                </div>
-                <div class="faq-answer">
-                    <p>We offer a 30-day return policy on all unworn items with original tags.
-                        Simply contact our customer service team to initiate a return.
-                        Shipping costs for returns are covered by us for any product defects.</p>
-                </div>
-            </div>
-
-            <div class="faq-item">
-                <div class="faq-question">
-                    <h3>How long does shipping take?</h3>
-                    <span class="faq-icon">+</span>
-                </div>
-                <div class="faq-answer">
-                    <p>Standard shipping takes 5-7 business days. Express shipping (2-3 days)
-                        is available at checkout. International orders typically arrive within 10-14 business days.
-                        You'll receive tracking information once your order ships.</p>
-                </div>
-            </div>
-
-            <div class="faq-item">
-                <div class="faq-question">
-                    <h3>Do you offer size guides?</h3>
-                    <span class="faq-icon">+</span>
-                </div>
-                <div class="faq-answer">
-                    <p>Yes! Each product page includes detailed sizing charts with measurements.
-                        We recommend measuring yourself and comparing to our size guide for the best fit.
-                        Our customer service team is also available to help with sizing questions.</p>
-                </div>
-            </div>
-
-            <div class="faq-item">
-                <div class="faq-question">
-                    <h3>Are your products sustainable?</h3>
-                    <span class="faq-icon">+</span>
-                </div>
-                <div class="faq-answer">
-                    <p>Absolutely. We're committed to sustainability with recycled materials in 60% of our products.
-                        Our packaging is 100% recyclable, and we partner with carbon-neutral shipping providers.
-                        We're continuously working to reduce our environmental impact.</p>
-                </div>
-            </div>
-
-            <div class="faq-item">
-                <div class="faq-question">
-                    <h3>Do you have a loyalty program?</h3>
-                    <span class="faq-icon">+</span>
-                </div>
-                <div class="faq-answer">
-                    <p>Yes! Join APEX Rewards to earn points on every purchase.
-                        Members get exclusive access to new releases, special discounts, and birthday rewards.
-                        Sign up is free and you'll immediately earn 100 welcome points.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact Form Section (Form Validation) -->
-    <section class="contact-section" id="contact">
-        <div class="section-header">
-            <h2>Get In Touch</h2>
-            <p class="section-subtitle">We'd love to hear from you</p>
-        </div>
-
-        <div class="contact-container">
-            <form id="contact-form" class="contact-form">
-                <div class="form-group">
-                    <label for="name">Full Name</label>
-                    <input type="text" id="name" name="name" placeholder="John Doe" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="email">Email Address</label>
-                    <input type="email" id="email" name="email" placeholder="john@example.com" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="message">Message</label>
-                    <textarea id="message" name="message" rows="5" placeholder="Tell us what's on your mind..."
-                        required></textarea>
-                </div>
-
-                <button type="submit" class="btn-primary submit-btn">Send Message</button>
-            </form>
-
-            <div class="contact-info">
-                <div class="info-item">
-                    <div class="info-icon">📧</div>
-                    <div>
-                        <h4>Email</h4>
-                        <p>support@apexsports.com</p>
-                    </div>
-                </div>
-                <div class="info-item">
-                    <div class="info-icon">📱</div>
-                    <div>
-                        <h4>Phone</h4>
-                        <p>+1 (555) 123-4567</p>
-                    </div>
-                </div>
-                <div class="info-item">
-                    <div class="info-icon">📍</div>
-                    <div>
-                        <h4>Location</h4>
-                        <p>Mumbai, Maharashtra, IN</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="footer-content">
-            <div class="footer-section">
-                <h3>APEX Sports</h3>
-                <p>Premium athletic gear for champions who refuse to settle.</p>
-                <div class="social-links">
-                    <a href="#" aria-label="Instagram">📷</a>
-                    <a href="#" aria-label="Twitter">🐦</a>
-                    <a href="#" aria-label="Facebook">📘</a>
-                    <a href="#" aria-label="YouTube">📹</a>
-                </div>
-            </div>
-
-            <div class="footer-section">
-                <h4>Quick Links</h4>
-                <a href="#products">Products</a>
-                <a href="#faq">FAQ</a>
-                <a href="#contact">Contact</a>
-                <a href="#">About Us</a>
-            </div>
-
-            <div class="footer-section">
-                <h4>Support</h4>
-                <a href="#">Shipping Info</a>
-                <a href="#">Returns</a>
-                <a href="#">Size Guide</a>
-                <a href="#">Track Order</a>
-            </div>
-
-            <div class="footer-section">
-                <h4>Newsletter</h4>
-                <p>Stay updated with our latest releases and exclusive offers.</p>
-                <button id="subscribe-btn" class="btn-secondary">Subscribe Now</button>
-            </div>
-        </div>
-
-        <div class="footer-bottom">
-            <p>© 2026 APEX Sports. All rights reserved.</p>
-            <p>Inspired by nike.in | Academic Project</p>
-        </div>
-    </footer>
-
-    <!-- Subscribe Modal -->
-    <div id="subscribe-modal" class="modal">
-        <div class="modal-content">
-            <button class="close-modal" id="close-modal">&times;</button>
-            <h2>Join the APEX Movement</h2>
-            <p>Get exclusive access to new releases, special offers, and athlete tips.</p>
-            <div class="modal-form">
-                <input type="email" id="modal-email" placeholder="Enter your email" required>
-                <button id="submit-subscribe" class="btn-primary">Subscribe</button>
-            </div>
-        </div>
-    </div>
-
-    <!-- Scroll to Top Button -->
-    <button id="scroll-top" class="scroll-top" aria-label="Scroll to top">↑</button>
-
-    <script src="script.js"></script>
-</body>
-
->>>>>>> 72d81e48d7b81d53a9a674e3d0e313d34d6dcec2
 </html>
